[package]
name = "neco-ast"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "zero dependency structured data access traits"
repository = "https://github.com/barineco/neco-parser"
readme = "README.md"
documentation = "https://docs.rs/neco-ast"
keywords = ["ast", "parser", "configuration"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
