[package]
name = "neco-json-ast"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "necosystems series structured access layer for JSON values"
repository = "https://github.com/barineco/neco-parser"
readme = "README.md"
documentation = "https://docs.rs/neco-json-ast"
keywords = ["json", "ast", "parser"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
neco-ast = { path = "../neco-ast", version = "0.1" }
neco-json = { path = "../neco-json", version = "0.1" }
