[package]
name = "neco-json"
version = "0.1.2"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "zero dependency minimal JSON codec for no_std environments"
repository = "https://github.com/barineco/neco-parser"
readme = "README.md"
documentation = "https://docs.rs/neco-json"
keywords = ["json", "no-std", "parser", "codec", "serialization"]
categories = ["encoding", "no-std", "parser-implementations"]

[dependencies]
