[package]
name = "neco-json5-ast"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "necosystems series structured access layer for JSON5 values"
repository = "https://github.com/barineco/neco-parser"
readme = "README.md"
documentation = "https://docs.rs/neco-json5-ast"
keywords = ["json5", "ast", "parser"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
neco-ast = { path = "../neco-ast", version = "0.1" }
neco-json5 = { path = "../neco-json5", version = "0.1" }
