[package]
name = "neco-json5"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "zero dependency JSON5 subset parser"
repository = "https://github.com/barineco/neco-parser"
readme = "README.md"
documentation = "https://docs.rs/neco-json5"
keywords = ["json5", "parser", "configuration"]
categories = ["encoding", "parser-implementations"]

