[package]
name = "neco-kdl-ast"
version = "0.1.0"
edition = "2021"
description = "necosystems series structured ast layer for KDL v2 documents"
license = "MIT"
repository = "https://github.com/barineco/neco-parser"
readme = "README.md"
keywords = ["kdl", "ast", "parser"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
neco-kdl = { path = "../neco-kdl", version = "0.3" }
