[package]
name = "neco-xml"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "zero dependency XML subset parser"
repository = "https://github.com/barineco/neco-parser"
readme = "README.md"
documentation = "https://docs.rs/neco-xml"
keywords = ["xml", "parser", "configuration"]
categories = ["encoding", "parser-implementations"]

