[package]
name = "neco-yml-ast"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "necosystems series structured access layer for YAML values"
repository = "https://github.com/barineco/neco-parser"
readme = "README.md"
documentation = "https://docs.rs/neco-yml-ast"
keywords = ["yml", "ast", "parser"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
neco-ast = { path = "../neco-ast", version = "0.1" }
neco-yml = { path = "../neco-yml", version = "0.1" }
