[package]
name = "neco-yml"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "zero dependency YAML subset parser"
repository = "https://github.com/barineco/neco-parser"
readme = "README.md"
documentation = "https://docs.rs/neco-yml"
keywords = ["yaml", "parser", "configuration"]
categories = ["encoding", "parser-implementations"]

